--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,26 @@
-version: '2'
+version: "3.3"
 services:
+  app:
+    build:
+      args:
+        user: abc
+        uid: 2000
+      context: ./
+      dockerfile: Dockerfile
+    image: registry.gitlab.com/riddhid2/php-laravel-travellist-demo:latest
+    container_name: scnsot
+    restart: unless-stopped
+    working_dir: /var/www/
+    volumes:
+      - ./:/var/www
+    networks:
+      - scnsot
 
   phpmyadmin:
     image: phpmyadmin
     restart: always
     ports:
-      - 8333:80
+      - 8555:80
     environment:
       - PMA_HOST=mysql1
       - PMA_USER=root
@@ -16,6 +31,8 @@ services:
   mysql1:
     image: mysql
     restart: always
+    ports:
+      - 3307:3307
     environment:
       - MYSQL_DATABASE=k1
       - MYSQL_USER=root1
